objects/Lead.object
<CustomObject><businessProcesses>
        <fullName>Helix Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Not yet contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pass</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Ability_to_Pay_Typical_Customer__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Ability to Pay (Typical Customer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Annual_Consumer_Base__c</fullName>
        <label>Annual Consumer Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>App_Experience__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>App Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Brand_Equity__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Brand Equity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Email_Batch__c</fullName>
        <description>For sending mass emails that need to go to over 250 recipients. Set this field to be unique 250 or less leads to allow creation of a list that is within sfdc limits for mass emails.</description>
        <inlineHelpText>For sending mass emails that need to go to over 250 recipients. Set this field to be unique 250 or less leads to allow creation of a list that is within sfdc limits for mass emails.</inlineHelpText>
        <label>Email Batch</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Existing_DNA_product__c</fullName>
        <label>Existing DNA product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Fill_a_Need_Gap__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Fill a Need/Gap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>For_Discussion__c</fullName>
        <label>For Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Innovation__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Innovation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Internal_Commitment__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Internal Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Invitation_Code_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the invitation code has already been used for an alpha kit order and an SFDC api will return an error to the Helix Marketplace if used.</description>
        <inlineHelpText>When checked, the invitation code has already been used for an alpha kit order and an SFDC api will return an error to the Helix Marketplace if used.</inlineHelpText>
        <label>Invitation Code Used</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Invitation_Code__c</fullName>
        <description>Unique invitation code checked by Helix Marketplace during alpha kit request process.</description>
        <inlineHelpText>Unique invitation code checked by Helix Marketplace during alpha kit request process.</inlineHelpText>
        <label>Invitation Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Lab_Status__c</fullName>
        <label>Lab Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Source_Details__c</fullName>
        <description>Used for validation rule for "Other" for Lead Source</description>
        <inlineHelpText>Used for validation rule for "Other" for Lead Source</inlineHelpText>
        <label>Lead Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Market_Category__c</fullName>
        <description>Please define the Market Category of the deal</description>
        <inlineHelpText>Please define the Market Category of the deal</inlineHelpText>
        <label>Market Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Category</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Market_Sub_category__c</fullName>
        <description>Please define the Market Sub-category</description>
        <inlineHelpText>Please define the Market Sub-category</inlineHelpText>
        <label>Market Sub-category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Market_Sub_category</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Market_Sub_category_details__c</fullName>
        <label>Market Sub-category details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Partner_Type__c</fullName>
        <description>Partner Type used for leads and maps to accounts</description>
        <inlineHelpText>Please select current partner type</inlineHelpText>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partners</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Pass_Reason_Details__c</fullName>
        <description>Used to capture details for "Pass (please specify reason)"</description>
        <inlineHelpText>Please details on why the lead is being passed on</inlineHelpText>
        <label>Pass Reason Details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Priority_Prospect__c</fullName>
        <label>Priority Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product_Market_Fit__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Product/ Market Fit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Resources__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Resources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Size_of_Customer_Base__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Size of Customer Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Status_Summary__c</fullName>
        <label>Status Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Timing__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Trust__c</fullName>
        <description>Used for Lead Scoring across Lead/ Opportunity Objects</description>
        <inlineHelpText>Used for Lead Scoring across Lead/ Opportunity Objects</inlineHelpText>
        <label>Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Scoring</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Welcome_Email_Send_Date__c</fullName>
        <description>Enter Welcome Email Send Date here to trigger a 1 week follow-up email if Invitation Code has not been used.  A time-based WFR will be queued to send the Order Reminder Email. Manually entered. Alpha-only.</description>
        <inlineHelpText>Enter Welcome Email Send Date here to trigger a 1 week follow-up email if Invitation Code has not been used. A time-based WFR will be queued to send the Order Reminder Email. Manually entered. Alpha-only.</inlineHelpText>
        <label>Welcome Email Send Date</label>
        <type>DateTime</type>
    </fields><compactLayoutAssignment>Leads_Custom_Compact_Layout</compactLayoutAssignment><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews><listViews>
        <fullName>Alpha_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Alpha 1</value>
        </filters>
        <label>Alpha 1</label>
    </listViews><listViews>
        <fullName>Alpha_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Welcome_Email_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Alpha 2</value>
        </filters>
        <label>Alpha 2</label>
    </listViews><listViews>
        <fullName>Alpha_5</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Welcome_Email_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Alpha 5</value>
        </filters>
        <label>Alpha 5</label>
    </listViews><listViews>
        <fullName>Alpha_6</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Welcome_Email_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Alpha 6</value>
        </filters>
        <label>Alpha 6</label>
    </listViews><listViews>
        <fullName>Alpha_Alpha</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Invitation_Code_Used__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Alpha Alpha</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@example.com,@thirdwave</value>
        </filters>
        <label>Alpha Alpha (no example.com)</label>
    </listViews><listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews><listViews>
        <fullName>My_B2B_Leads</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Helix_B2B_Lead_Layout</value>
        </filters>
        <label>My B2B Leads</label>
    </listViews><listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews><recordTypes>
        <fullName>Helix_B2B_Lead_Layout</fullName>
        <active>true</active>
        <businessProcess>Helix Lead Process</businessProcess>
        <description>Used for B2B Leads</description>
        <label>Helix B2B Lead Layout</label>
    </recordTypes><recordTypes>
        <fullName>Helix_B2C_Lead_Layout</fullName>
        <active>true</active>
        <businessProcess>Helix Lead Process</businessProcess>
        <description>Used for B2C Leads</description>
        <label>Helix B2C Lead Layout</label>
    </recordTypes><validationRules>
        <fullName>Lead_Source_Details</fullName>
        <active>true</active>
        <description>Used to force Detail when (Please Specify) is in the details</description>
        <errorConditionFormula>AND( 
ISBLANK(Lead_Source_Details__c),
 OR (
ISPICKVAL(LeadSource , "Internal referral (please specify)"), ISPICKVAL(LeadSource , "External referral (please specify)"),
ISPICKVAL(LeadSource , "Other (please specify)")
)
)</errorConditionFormula>
        <errorDisplayField>Lead_Source_Details__c</errorDisplayField>
        <errorMessage>Please fill in Details</errorMessage>
    </validationRules><validationRules>
        <fullName>Market_sub_category_details</fullName>
        <active>true</active>
        <description>Used to force Detail when (Please Specify) is in the details</description>
        <errorConditionFormula>AND( 
ISBLANK( Market_Sub_category_details__c ),
ISPICKVAL( Market_Sub_category__c, "Other (please specify)")
)</errorConditionFormula>
        <errorDisplayField>Market_Sub_category_details__c</errorDisplayField>
        <errorMessage>Please fill in Details</errorMessage>
    </validationRules><validationRules>
        <fullName>Pass_Reason_Details</fullName>
        <active>true</active>
        <description>Used to help the end user define the pass reasons</description>
        <errorConditionFormula>AND ( 
( ISPICKVAL (Status , "Pass (please specify reason)")), ISBLANK(  Pass_Reason_Details__c ))</errorConditionFormula>
        <errorDisplayField>Pass_Reason_Details__c</errorDisplayField>
        <errorMessage>Please fill in reason for the pass on the lead</errorMessage>
    </validationRules></CustomObject>